@@ -1,3 +1,8 @@
+2008-03-11  0.37 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+
+	* Copied GIT repo to public mirror
+	* Fix leak / make meta info available to getline () + tests
+
 2008-03-06  0.36 - H.Merijn Brand   <h.m.brand@xs4all.nl>
 
 	* Updated ppport.h
